Testcases/pos/test12.jl

function main()
    a::Integer = --+2 - 2

        b::Integer = 5
        temp::Integer = 7 * (4 + 1)
    x::Bool = 5 > 8
    if a + 1 > 1
        a = 5
    else
        a = 7
    end
    abc("a", 5, false)
    b =7
end

function lol(test::Integer)::Float64  # wtf
    return 2.2
end

function test()::Bool
#=
awd awd

=# 


x::Integer = 5 * 2
    y::Bool = x > 5
    return y && true
end

function abc(a::String, b::Float64, c::Bool) #= ::String
     aw
     =#
x::Integer = y
 y::Integer = 5
    return
end # wad

main()
